[gd_scene load_steps=3 format=3 uid="uid://dqkxuyb0x0fr6"]

[ext_resource type="FontFile" uid="uid://dy0h01gg66of2" path="res://assets/fonts/PixelOperator8.ttf" id="1_3shnc"]
[ext_resource type="Script" uid="uid://jkfarotuxysp" path="res://scripts/level_select.gd" id="1_p0wlc"]

[node name="level_select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p0wlc")

[node name="background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="levels" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.5
offset_top = -73.0
offset_right = 204.5
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="level_1" type="Button" parent="levels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 24
text = "Level 1"

[node name="level_2" type="Button" parent="levels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 24
text = "Level 2
"

[node name="level_3" type="Button" parent="levels"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_3shnc")
theme_override_font_sizes/font_size = 24
text = "Level 3
"

[connection signal="pressed" from="levels/level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="levels/level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="levels/level_3" to="." method="_on_level_3_pressed"]
